tests/data/invalid/group_undeclared_reference.aoncir
[format]
format_version = "1.0.0"
encoding       = "utf-8"

[meta]
name           = "group_undeclared_reference_should_be_rejected"
version        = "1.0.0"
parameters     = {}
level          = 6
status         = "experimental"

# This port references group "ghost_bus" which is never declared in
# [[semantic_groups]].
[[ports.inputs]]
name         = "operand_bit_zero"
semantic_tag = "operand_bit"
group        = "ghost_bus"
bit_position = 0

[[ports.outputs]]
name         = "data_output"
semantic_tag = "data_bit"
group        = ""

[[signals]]
id = "data_output_internal"

[[gates]]
id     = "g_invert"
kind   = "NOT"
inputs = ["operand_bit_zero"]
output = "data_output_internal"

[[outputs]]
port   = "data_output"
source = "data_output_internal"
